# ruffly

./: LICENSE  README.md  pyproject.toml
.github/: main.yaml  publish.yaml
.github/workflows/: main.yaml
src/: cli.py  utils.py
src/ruffly/: cli.py  default.toml  utils.py
tests/: test_cli.py  testdefault.toml
