[project]
name = "ruffly"
version = "0.0.1"
authors = [
  {name = "Lewis Harvey", email = "123@gmail.com"}
]
description= "Cli tool to add common config to pyroject.toml"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies=["toml"]

[project.optional-dependencies]
dev = ["pytest", "pytest-random-order", "coverage", "mypy", "ruff", "poethepoet"]

[project.scripts]
ruffly = "src.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
